--- a/Src/deepwork-front-end/package.json
+++ b/Src/deepwork-front-end/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^4.1.2",
     "core-js": "^3.8.3",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -24,6 +25,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "less-loader": "^12.2.0",
     "typescript": "~4.5.5"
   }
 }
