adding login backend

--- a/Src/Deepwork-maven/src/main/resources/application.properties
+++ b/Src/Deepwork-maven/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/deepworkdb
+spring.datasource.username=hamzakh
+spring.datasource.password=7AMZA5anfara&é
