--- a/Src/Deepwork-maven/src/main/resources/application.properties
+++ b/Src/Deepwork-maven/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/deepworkdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/deepworkdb1
 spring.datasource.username=hamzakh
 spring.datasource.password=7AMZA5anfara&é
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
